--- a/Ajith.html
+++ b/Ajith.html
@@ -1,4 +1,8 @@
-<centre>
+<center>
   <h1>Ajith</h1>
-</centre>
+</center>
 <hr>
+
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor velit aliquam ullam tempora amet reprehenderit repudiandae repellendus blanditiis minima ducimus accusamus sunt suscipit, aspernatur eos. Eum commodi omnis architecto aliquam iste nihil, rerum enim vel blanditiis ut nemo assumenda ab et magnam veritatis necessitatibus? Officia quam incidunt dignissimos et libero.
+</p>
